added endpoint for getting command execution info
