# src/log/executor/dto.go
@@ -1,0 +1,7 @@
+package executor
+
+type CommandExecutionInfo struct {
+	Value   any
+	Message string
+	Success bool
+}
